--- a/01-comunicacion/backend2/Dockerfile
+++ b/01-comunicacion/backend2/Dockerfile
@@ -1,11 +1,13 @@
 FROM node:14.15.3-alpine
 
+ARG BASE_DIR="backend2"
+
 WORKDIR /app
 
-COPY package*.json ./
+COPY ${BASE_DIR}/package*.json ./
 
 RUN npm install
 
-COPY ./  ./
+COPY ${BASE_DIR}/  ./
 
 CMD ["npm", "run", "start"]
